[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Kingthings-Petrock/Kingthings_Petrock.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/The Elder Scrolls IV - Oblivion.mp3" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 96
outline_size = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 5
font_data = ExtResource( 1 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -120.0
margin_bottom = -80.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1126.0
margin_bottom = 608.0

[node name="Logo" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1126.0
margin_bottom = 108.0
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Logo"]
margin_left = 375.0
margin_right = 751.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Scrum Age"
align = 1
valign = 1

[node name="ListOfPlayers" type="Label" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 1126.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "List of Players"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 171.0
margin_right = 1126.0
margin_bottom = 332.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerOne" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
margin_left = 438.0
margin_right = 688.0
margin_bottom = 29.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Player One"
align = 1

[node name="PlayerTwo" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
margin_left = 438.0
margin_top = 33.0
margin_right = 688.0
margin_bottom = 62.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Player Two"
align = 1

[node name="PlayerThree" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
margin_left = 438.0
margin_top = 66.0
margin_right = 688.0
margin_bottom = 95.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Player Three"
align = 1

[node name="PlayerFour" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
margin_left = 438.0
margin_top = 99.0
margin_right = 688.0
margin_bottom = 128.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Player Four"
align = 1

[node name="PlayerFive" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
margin_left = 438.0
margin_top = 132.0
margin_right = 688.0
margin_bottom = 161.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Player Five"
align = 1

[node name="MenuOptions" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 336.0
margin_right = 1126.0
margin_bottom = 436.0
rect_min_size = Vector2( 1000, 0 )
size_flags_vertical = 3
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer/MenuOptions"]
margin_left = 284.0
margin_right = 484.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
custom_fonts/font = SubResource( 4 )
text = "Start"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MenuOptions"]
margin_left = 488.0
margin_right = 638.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 0 )

[node name="End" type="Button" parent="VBoxContainer/MenuOptions"]
margin_left = 642.0
margin_right = 842.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
custom_fonts/font = SubResource( 5 )
text = "End"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 440.0
margin_right = 1126.0
margin_bottom = 529.0
size_flags_vertical = 3

[node name="VersionNumber" type="Label" parent="VBoxContainer"]
margin_top = 533.0
margin_right = 1126.0
margin_bottom = 608.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Version 0.2 The critically acclaimed MMORPG Final Fantasy XIV with a
free trial until level 60 including the Heavensward Expansion"
align = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="pressed" from="VBoxContainer/MenuOptions/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuOptions/End" to="." method="_on_End_pressed"]
